# cisco-forecast

./: .gitignore  data_pack.csv  pyproject.toml
docs/: Forecasting models and methods.md
docs/eda/: Analysis.md  Forecasting models and methods.md  Seasonality and Cycle Analysis Report.md  Trends.md  Visualize.md
eda/: analysis.ipynb  visualize_data.ipynb
